[package]
name = "mctrlrs"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.13", default-features = false, features = [] }
actix-files = { version = "0.6", default-features = false, features = [] }
actix-session = { version = "0.11", default-features = false, features = [] }
actix-web = { version = "4", default-features = false, features = ["rustls-0_23"] }
anyhow = "1.0"
argon2 = { version = "0.5" }
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage"] }
handlebars = { version = "6", features = ["dir_source"] }
rand = { version = "0.9", default-features = false, features = [] }
rustls = { version = "0.23.35", default-features = false, features = ["logging", "ring", "std"] }
rustls-pemfile = "2.1.3"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["serde_derive"] }
serde_yaml_ng = { version = "0.10.0", default-features = false, features = [] }
thiserror = { version = "2", default-features = false, features = [] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
url = { version = "2.5.7", default-features = false, features = ["serde"] }
